feat: add persistent segment tree impl & add benchmark

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,14 @@
 cmake_minimum_required(VERSION 3.15)
-project(conan_template CXX)
+project(lab_benchmarks CXX)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(benchmark REQUIRED)
 
 # Add subfolders
-SET(IMPLEMENTATIONS src/implementations/NaiveRectangleEnumeration.cpp src/implementations/QubicMapBuilding.cpp)
+SET(IMPLEMENTATIONS 
+    src/implementations/NaiveRectangleEnumeration.cpp 
+    src/implementations/QubicMapBuilding.cpp
+    src/implementations/PersistentSegmentTree.cpp)
 SET(COMMON src/common/TestCaseGenerator.cpp)
 
 # Combine main with all other
