refactor: massive refactor to please warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,11 @@ SET(COMMON src/common/TestCaseGenerator.cpp)
 SET(SRCS src/main.cpp ${IMPLEMENTATIONS} ${COMMON})
 
 add_executable(${PROJECT_NAME} ${SRCS})
+
+if(MSVC)
+  target_compile_options(${PROJECT_NAME} PRIVATE /W4 /WX)
+else()
+  target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror -Wshadow -Wconversion)
+endif()
+
 target_link_libraries(${PROJECT_NAME} benchmark::benchmark)
