--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,5 +30,9 @@ jobs:
         run: cd ${{ github.workspace }}/build && cmake .. -DCMAKE_TOOLCHAIN_FILE=conan_toolchain.cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
       - name: CMake build
         run: cd ${{ github.workspace }}/build && cmake --build . --config ${{ env.BUILD_TYPE }}
+      - uses: actions/upload-artifact@v3
+        with:
+          name: executable-binary
+          path: ${{ github.workspace }}/build/lab_benchmarks
         
 
